@@ -761,8 +761,8 @@ public class BitmapFont implements Disposable {
 		}
 
 		/** Returns the glyph for the specified character, or null if no such glyph exists. Note that
-		 * {@link #getGlyphs(GlyphRun, CharSequence, int, int)} should be be used to shape a string of characters into a list of
-		 * glyphs. */
+		 * {@link #getGlyphs(GlyphRun, CharSequence, int, int, boolean)} should be be used to shape a string of characters into a
+		 * list of glyphs. */
 		public Glyph getGlyph (char ch) {
 			Glyph[] page = glyphs[ch / PAGE_SIZE];
 			if (page != null) return page[ch & PAGE_SIZE - 1];
@@ -771,8 +771,11 @@ public class BitmapFont implements Disposable {
 
 		/** Using the specified string, populates the glyphs and positions of the specified glyph run.
 		 * @param str Characters to convert to glyphs. Will not contain newline or color tags. May contain "[[" for an escaped left
-		 *           square bracket. */
-		public void getGlyphs (GlyphRun run, CharSequence str, int start, int end) {
+		 *           square bracket.
+		 * @param tightBounds If true, the first {@link GlyphRun#xAdvances} entry is offset to prevent the first glyph from being
+		 *           drawn left of 0 and the last entry is offset to prevent the last glyph from being drawn right of the run
+		 *           width. */
+		public void getGlyphs (GlyphRun run, CharSequence str, int start, int end, boolean tightBounds) {
 			boolean markupEnabled = this.markupEnabled;
 			float scaleX = this.scaleX;
 			Glyph missingGlyph = this.missingGlyph;
@@ -791,7 +794,7 @@ public class BitmapFont implements Disposable {
 				glyphs.add(glyph);
 
 				if (lastGlyph == null) // First glyph.
-					xAdvances.add(glyph.fixedWidth ? 0 : -glyph.xoffset * scaleX - padLeft);
+					xAdvances.add((!tightBounds || glyph.fixedWidth) ? 0 : -glyph.xoffset * scaleX - padLeft);
 				else
 					xAdvances.add((lastGlyph.xadvance + lastGlyph.getKerning(ch)) * scaleX);
 				lastGlyph = glyph;
@@ -800,8 +803,9 @@ public class BitmapFont implements Disposable {
 				if (markupEnabled && ch == '[' && start < end && str.charAt(start) == '[') start++;
 			}
 			if (lastGlyph != null) {
-				int lastGlyphWidth = lastGlyph.fixedWidth ? lastGlyph.xadvance : lastGlyph.xoffset + lastGlyph.width;
-				xAdvances.add(lastGlyphWidth * scaleX - padRight);
+				float lastGlyphWidth = (!tightBounds || lastGlyph.fixedWidth) ? lastGlyph.xadvance
+					: lastGlyph.xoffset + lastGlyph.width - padRight;
+				xAdvances.add(lastGlyphWidth * scaleX);
 			}
 		}
 
