@@ -105,7 +105,7 @@ public class GlyphLayout implements Poolable {
 		while (true) {
 			// Each run is delimited by newline or left square bracket.
 			int runEnd = -1;
-			boolean newline = false;
+			boolean newline = false, colorRun = false;
 			if (start == end) {
 				if (runStart == end) break; // End of string with no run to process, we're done.
 				runEnd = end; // End of string, process last run.
@@ -124,6 +124,7 @@ public class GlyphLayout implements Poolable {
 							runEnd = start - 1;
 							start += length + 1;
 							nextColor = colorStack.peek();
+							colorRun = true;
 						}
 					}
 					break;
@@ -138,7 +139,7 @@ public class GlyphLayout implements Poolable {
 					run.color.set(color);
 					run.x = x;
 					run.y = y;
-					fontData.getGlyphs(run, str, runStart, runEnd);
+					fontData.getGlyphs(run, str, runStart, runEnd, colorRun);
 
 					// Compute the run width, wrap if necessary, and position the run.
 					float[] xAdvances = run.xAdvances.items;
@@ -230,7 +231,7 @@ public class GlyphLayout implements Poolable {
 
 		// Determine truncate string size.
 		GlyphRun truncateRun = glyphRunPool.obtain();
-		fontData.getGlyphs(truncateRun, truncate, 0, truncate.length());
+		fontData.getGlyphs(truncateRun, truncate, 0, truncate.length(), true);
 		float truncateWidth = 0;
 		for (int i = 1, n = truncateRun.xAdvances.size; i < n; i++)
 			truncateWidth += truncateRun.xAdvances.get(i);
